tests/neg/i16861.scala
given foo[T]: Any = summon[bar] // error
def bar: Nothing = ???